lang.java.statics.test/tests/classes/inheritance/inheritnonexistingnestedclass.no.spt
module classes/inheritance/inheritnonexistingnestedclass_no

language metaborg-java

test inheritnonexistingnestedclass [[

test;



// error: cannot find symbol

[A]
public class A {
    public class B {}
}

[C]
public class C extends A.D {}


]] analysis fails
   run javacFails to ""
